--- a/content/publication/202108_disparities/cite.bib
+++ b/content/publication/202108_disparities/cite.bib
@@ -1,10 +1,7 @@
-@article{grinsztajn2021bayesian,
-  title={Bayesian workflow for disease transmission modeling in Stan},
-  author={Grinsztajn, L{\'e}o and Semenova, Elizaveta and Margossian, Charles C and Riou, Julien},
-  journal={Statistics in medicine},
-  volume={40},
-  number={27},
-  pages={6209--6234},
+@article{brito2021global,
+  title={Global disparities in SARS-CoV-2 genomic surveillance},
+  author={Brito, Anderson F and Semenova, Elizaveta and Dudas, Gytis and Hassler, Gabriel W and Kalinich, Chaney C and Kraemer, Moritz UG and Ho, Joses and Tegally, Houriiyah and Githinji, George and Agoti, Charles N and others},
+  journal={Medrxiv},
   year={2021},
-  publisher={Wiley Online Library}
+  publisher={Cold Spring Harbor Laboratory Preprints}
 }
