--- a/content/publication/202209_disparities/cite.bib
+++ b/content/publication/202209_disparities/cite.bib
@@ -1,7 +1,7 @@
-@article{brito2021global,
+@article{brito2022global,
   title={Global disparities in SARS-CoV-2 genomic surveillance},
   author={Brito, Anderson F and Semenova, Elizaveta and Dudas, Gytis and Hassler, Gabriel W and Kalinich, Chaney C and Kraemer, Moritz UG and Ho, Joses and Tegally, Houriiyah and Githinji, George and Agoti, Charles N and others},
-  journal={Medrxiv},
-  year={2021},
+  journal={Nature Communications},
+  year={2022},
   publisher={Cold Spring Harbor Laboratory Preprints}
 }
