--- a/content/publication/202206_PriorVAE/cite.bib
+++ b/content/publication/202206_PriorVAE/cite.bib
@@ -1,7 +1,10 @@
-@article{brito2021global,
-  title={Global disparities in SARS-CoV-2 genomic surveillance},
-  author={Brito, Anderson F and Semenova, Elizaveta and Dudas, Gytis and Hassler, Gabriel W and Kalinich, Chaney C and Kraemer, Moritz UG and Ho, Joses and Tegally, Houriiyah and Githinji, George and Agoti, Charles N and others},
-  journal={Medrxiv},
-  year={2021},
-  publisher={Cold Spring Harbor Laboratory Preprints}
+@article{semenova2022priorvae,
+  title={PriorVAE: encoding spatial priors with variational autoencoders for small-area estimation},
+  author={Semenova, Elizaveta and Xu, Yidan and Howes, Adam and Rashid, Theo and Bhatt, Samir and Mishra, Swapnil and Flaxman, Seth},
+  journal={Journal of the Royal Society Interface},
+  volume={19},
+  number={191},
+  pages={20220094},
+  year={2022},
+  publisher={The Royal Society}
 }
