Diaprities - Nature Comms published

--- a/content/publication/202209_disparities/cite.bib
+++ b/content/publication/202209_disparities/cite.bib
@@ -2,6 +2,9 @@
   title={Global disparities in SARS-CoV-2 genomic surveillance},
   author={Brito, Anderson F and Semenova, Elizaveta and Dudas, Gytis and Hassler, Gabriel W and Kalinich, Chaney C and Kraemer, Moritz UG and Ho, Joses and Tegally, Houriiyah and Githinji, George and Agoti, Charles N and others},
   journal={Nature Communications},
+  volume={13},
+  number={1},
+  pages={1--13},
   year={2022},
-  publisher={Cold Spring Harbor Laboratory Preprints}
+  publisher={Nature Publishing Group}
 }
